[gd_scene load_steps=2 format=3 uid="uid://c8pqn7kx4mjpr"]

[ext_resource type="Script" path="res://ui/hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="UIRoot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopInfoContainer" type="Control" parent="UIRoot"]
layout_mode = 1
anchor_right = 0.35
anchor_bottom = 0.35
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="UIRoot/TopInfoContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UIRoot/TopInfoContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="EnemyHealth" type="VBoxContainer" parent="UIRoot/TopInfoContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIRoot/TopInfoContainer/MarginContainer/VBoxContainer/EnemyHealth"]
layout_mode = 2
text = "Enemy Core: 1000/1000"

[node name="HealthBar" type="ProgressBar" parent="UIRoot/TopInfoContainer/MarginContainer/VBoxContainer/EnemyHealth"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
value = 100.0
show_percentage = false

[node name="PlayerHealth" type="VBoxContainer" parent="UIRoot/TopInfoContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIRoot/TopInfoContainer/MarginContainer/VBoxContainer/PlayerHealth"]
layout_mode = 2
text = "Player Core: 1000/1000"

[node name="HealthBar" type="ProgressBar" parent="UIRoot/TopInfoContainer/MarginContainer/VBoxContainer/PlayerHealth"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
value = 100.0
show_percentage = false

[node name="EnergyBar" type="ProgressBar" parent="UIRoot/TopInfoContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
value = 50.0
show_percentage = false

[node name="EnergyLabel" type="Label" parent="UIRoot/TopInfoContainer/MarginContainer/VBoxContainer/EnergyBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Energy: 5/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CaptureStatus" type="Label" parent="UIRoot/TopInfoContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Objective: Neutral"
horizontal_alignment = 1

[node name="BottomTrayContainer" type="Control" parent="UIRoot"]
layout_mode = 1
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="UIRoot/BottomTrayContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UIRoot/BottomTrayContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="UnitButtons" type="HBoxContainer" parent="UIRoot/BottomTrayContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Controls" type="Label" parent="UIRoot/BottomTrayContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "WASD: Move Commander | Space: Ability | Click Unit Buttons to Deploy
Right Click: Move Commander"
horizontal_alignment = 1
vertical_alignment = 2

[node name="GameOverContainer" type="Control" parent="UIRoot"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GameOverPanel" type="Panel" parent="UIRoot/GameOverContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UIRoot/GameOverContainer/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ResultLabel" type="Label" parent="UIRoot/GameOverContainer/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "VICTORY!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UIRoot/GameOverContainer/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Restart"
